--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "css-loader": "^3.5.3",
     "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
